maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
			if (getIndication(i,j)==10000) setIndication(i,j)
                                                                    ^